plang/testing/logs/false-incorrect/8/program8.p.p
up4mE IksVT Skv :- eL jyYH (Fb).
u9n (Qc) :- (((usp2 (emL ExTLm (payi (Kb6) (h (l (oSIPz (rMPI) bIZ) (nNf) BG oO2) (vaL7) (fA (b07E2 I3fb (kxYiU (Cwd) P5z) CuiIm)))) (uC (c (Z) (BeK9) (GBq) ER)) (we)) (ttlDN); e umg4 Lg, (dY)))).


ru.
yp (u7Ti Q).

cPGgn (WL) jD :- rmp (oJz) uGxF (eF TYH B8 (U)).
nMB5 bG1wQ :- (kUB (P3k)).
mR a5fz T hC2WR (XgZ) :- ((w ulp (zz (ye7P FB GLV) (g v9HUH (LO3) (N3px)) (cnL)) LfowP; sedBg; e8AQ; w81Zq WWTK (zbu K17LQ yaBM5) (H)); (tnr M6a3 R7tMb (C) lrep); (naP u0JA), vmJUF hHZ1C (U) PcK, (f20k)).

? q, ((tusG8, tcY A6QDL), zGg; h y s6bqq, xe9 D1 WgjH (LWW); w9 (N) (Vvz) M (tre (V9) u)).

